-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
When using a transformation on a gradient in a SVG file then it is not transformed correctly. If you compare it to how it looks in Chrome or Safari then the difference is notable as the rotation is more prominent there.
- is duplicated by
-
QTBUG-67995 QGradient with ObjectBoundingMode produces an incorrect result
-
- Closed
-