src/corelib/serialization/qdatastream.h
@@ -98,7 +98,7 @@ public:
         Qt_5_9 = Qt_5_8,
         Qt_5_10 = Qt_5_9,
         Qt_5_11 = Qt_5_10,
-        Qt_5_12 = Qt_5_11,
+        Qt_5_12 = 18,
 #if QT_VERSION >= 0x050d00
 #error Add the datastream version for this Qt version and update Qt_DefaultCompiledVersion
 #endif
