src/gui/painting/qbrush.cpp
@@ -1077,7 +1077,10 @@ QDataStream &operator<<(QDataStream &s, const QBrush &b)
         s << type_as_int;
         if (s.version() >= QDataStream::Qt_4_3) {
             s << int(gradient->spread());
-            s << int(gradient->coordinateMode());
+            QGradient::CoordinateMode co_mode = gradient->coordinateMode();
+            if (s.version() < QDataStream::Qt_5_12 && co_mode == QGradient::ObjectMode)
+                co_mode = QGradient::ObjectBoundingMode;
+            s << int(co_mode);
         }
 
         if (s.version() >= QDataStream::Qt_4_5)
@@ -1562,14 +1565,19 @@ QGradientStops QGradient::stops() const
 
     \value LogicalMode This is the default mode. The gradient coordinates
     are specified logical space just like the object coordinates.
+    \value ObjectMode In this mode the gradient coordinates are
+    relative to the bounding rectangle of the object being drawn, with
+    (0,0) in the top left corner, and (1,1) in the bottom right corner
+    of the object's bounding rectangle. This value was added in Qt
+    5.12.
     \value StretchToDeviceMode In this mode the gradient coordinates
     are relative to the bounding rectangle of the paint device,
     with (0,0) in the top left corner, and (1,1) in the bottom right
     corner of the paint device.
-    \value ObjectBoundingMode In this mode the gradient coordinates are
-    relative to the bounding rectangle of the object being drawn, with
-    (0,0) in the top left corner, and (1,1) in the bottom right corner
-    of the object's bounding rectangle.
+    \value ObjectBoundingMode This mode is the same as ObjectMode, except that
+    the {QBrush::transform()} {brush transform}, if any, is applied relative to
+    the logical space instead of the object space. This enum value is
+    deprecated and should not be used in new code.
 */
 
 /*!
